Fixes to spacing issues under .main.

--- a/style/main.css
+++ b/style/main.css
@@ -493,6 +493,7 @@ header li:nth-of-type(1){
 
 header li:nth-of-type(3){
     width: 10%;
+    margin: 0 auto;
 }
 
 
@@ -517,7 +518,9 @@ header li:nth-of-type(3){
     float: left;
     clear: none;
     width: 30%;
+    margin: 1.33em 0;
 }
+
 
 
 }
